# semantic-scholar-search

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml  search_cli.py  setup.py
semantic_scholar_search/: database.py  download.py  search.py  search_cli.py
semantic_scholar_search/base/: database.py  download.py  search.py
tests/: test_database.py  test_download.py  test_search.py  test_search_cli.py
tests/base/: test_database.py  test_download.py  test_search.py
